{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 18,
  "lineage": "a6d5b20e-e033-4110-7a26-88128c2251a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-094f344f39d531a03",
            "domain": "vpc",
            "id": "eipalloc-0122d662b281280af",
            "instance": "i-07c378a9c1450026e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-012c05d9cf7ed61df",
            "private_dns": "ip-10-0-1-54.ec2.internal",
            "private_ip": "10.0.1.54",
            "public_dns": "ec2-3-215-146-200.compute-1.amazonaws.com",
            "public_ip": "3.215.146.200",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Hangout-Project2"
            },
            "tags_all": {
              "Name": "Hangout-Project2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2-k8s",
            "aws_key_pair.generated_key",
            "aws_security_group.production_private_sg",
            "aws_subnet.production-public-1",
            "aws_vpc.production",
            "data.aws_availability_zones.available",
            "tls_private_key.ec2-key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02aec0eb969cd70bd",
            "domain": "vpc",
            "id": "eipalloc-063b572bc66a2220d",
            "instance": "i-0eafc53586c8e184b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-038cf348238ccf3e9",
            "private_dns": "ip-10-0-1-126.ec2.internal",
            "private_ip": "10.0.1.126",
            "public_dns": "ec2-34-237-106-4.compute-1.amazonaws.com",
            "public_ip": "34.237.106.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Hangout-Project2"
            },
            "tags_all": {
              "Name": "Hangout-Project2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2-k8s",
            "aws_key_pair.generated_key",
            "aws_security_group.production_private_sg",
            "aws_subnet.production-public-1",
            "aws_vpc.production",
            "data.aws_availability_zones.available",
            "tls_private_key.ec2-key"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-052ee3c3755163705",
            "domain": "vpc",
            "id": "eipalloc-009442f46a5219253",
            "instance": "i-03bb735ffe237d7ed",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f3a55ce92deb2541",
            "private_dns": "ip-10-0-1-193.ec2.internal",
            "private_ip": "10.0.1.193",
            "public_dns": "ec2-35-173-75-49.compute-1.amazonaws.com",
            "public_ip": "35.173.75.49",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Hangout-Project2"
            },
            "tags_all": {
              "Name": "Hangout-Project2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2-k8s",
            "aws_key_pair.generated_key",
            "aws_security_group.production_private_sg",
            "aws_subnet.production-public-1",
            "aws_vpc.production",
            "data.aws_availability_zones.available",
            "tls_private_key.ec2-key"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0c794628d176f8aaa",
            "domain": "vpc",
            "id": "eipalloc-0a4a6b38e1143056b",
            "instance": "i-08ca72ce30f4f8f8e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-088d97faa27ef0f67",
            "private_dns": "ip-10-0-1-216.ec2.internal",
            "private_ip": "10.0.1.216",
            "public_dns": "ec2-3-93-103-0.compute-1.amazonaws.com",
            "public_ip": "3.93.103.0",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Hangout-Project2"
            },
            "tags_all": {
              "Name": "Hangout-Project2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2-k8s",
            "aws_key_pair.generated_key",
            "aws_security_group.production_private_sg",
            "aws_subnet.production-public-1",
            "aws_vpc.production",
            "data.aws_availability_zones.available",
            "tls_private_key.ec2-key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:275165642836:instance/i-07c378a9c1450026e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07c378a9c1450026e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "awskey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-012c05d9cf7ed61df",
            "private_dns": "ip-10-0-1-54.ec2.internal",
            "private_ip": "10.0.1.54",
            "public_dns": "ec2-3-86-84-120.compute-1.amazonaws.com",
            "public_ip": "3.86.84.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c9f5769179e7cd3b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce7f75be852fb190",
            "tags": {
              "Environment": "Production",
              "Name": "jenkins 1",
              "Project1": "Hangout-Project2"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "jenkins 1",
              "Project1": "Hangout-Project2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b3f1687078364093"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.production_private_sg",
            "aws_subnet.production-public-1",
            "aws_vpc.production",
            "data.aws_availability_zones.available",
            "tls_private_key.ec2-key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:275165642836:instance/i-0eafc53586c8e184b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eafc53586c8e184b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "awskey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-038cf348238ccf3e9",
            "private_dns": "ip-10-0-1-126.ec2.internal",
            "private_ip": "10.0.1.126",
            "public_dns": "ec2-34-239-130-208.compute-1.amazonaws.com",
            "public_ip": "34.239.130.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ed1191a6f212a3c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce7f75be852fb190",
            "tags": {
              "Environment": "Production",
              "Name": "jenkins 2",
              "Project1": "Hangout-Project2"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "jenkins 2",
              "Project1": "Hangout-Project2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b3f1687078364093"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.production_private_sg",
            "aws_subnet.production-public-1",
            "aws_vpc.production",
            "data.aws_availability_zones.available",
            "tls_private_key.ec2-key"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:275165642836:instance/i-03bb735ffe237d7ed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03bb735ffe237d7ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "awskey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f3a55ce92deb2541",
            "private_dns": "ip-10-0-1-193.ec2.internal",
            "private_ip": "10.0.1.193",
            "public_dns": "ec2-54-175-147-151.compute-1.amazonaws.com",
            "public_ip": "54.175.147.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0637b75fb235baa10",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce7f75be852fb190",
            "tags": {
              "Environment": "Production",
              "Name": "jenkins 3",
              "Project1": "Hangout-Project2"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "jenkins 3",
              "Project1": "Hangout-Project2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b3f1687078364093"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.production_private_sg",
            "aws_subnet.production-public-1",
            "aws_vpc.production",
            "data.aws_availability_zones.available",
            "tls_private_key.ec2-key"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:275165642836:instance/i-08ca72ce30f4f8f8e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ca72ce30f4f8f8e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "awskey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-088d97faa27ef0f67",
            "private_dns": "ip-10-0-1-216.ec2.internal",
            "private_ip": "10.0.1.216",
            "public_dns": "ec2-54-172-171-231.compute-1.amazonaws.com",
            "public_ip": "54.172.171.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0be2faf83d94db373",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce7f75be852fb190",
            "tags": {
              "Environment": "Production",
              "Name": "jenkins 4",
              "Project1": "Hangout-Project2"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "jenkins 4",
              "Project1": "Hangout-Project2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b3f1687078364093"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.production_private_sg",
            "aws_subnet.production-public-1",
            "aws_vpc.production",
            "data.aws_availability_zones.available",
            "tls_private_key.ec2-key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "production-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275165642836:internet-gateway/igw-0336a6b0eab1c131e",
            "id": "igw-0336a6b0eab1c131e",
            "owner_id": "275165642836",
            "tags": {
              "Name": "Hangout-Project2"
            },
            "tags_all": {
              "Name": "Hangout-Project2"
            },
            "vpc_id": "vpc-0afcca399059ae367"
          },
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "production-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275165642836:route-table/rtb-0738aa25d03f15836",
            "id": "rtb-0738aa25d03f15836",
            "owner_id": "275165642836",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0336a6b0eab1c131e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Hangout-Project2"
            },
            "tags_all": {
              "Name": "Hangout-Project2"
            },
            "vpc_id": "vpc-0afcca399059ae367"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.production-gw",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "production-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051f8798a3d830685",
            "route_table_id": "rtb-0738aa25d03f15836",
            "subnet_id": "subnet-0ce7f75be852fb190"
          },
          "dependencies": [
            "aws_internet_gateway.production-gw",
            "aws_route_table.production-public",
            "aws_subnet.production-public-1",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "production_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275165642836:security-group/sg-0b3f1687078364093",
            "description": "Allow limited inbound external traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3f1687078364093",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "production-sg",
            "name_prefix": "",
            "owner_id": "275165642836",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Hangout-Project2"
            },
            "tags_all": {
              "Name": "Hangout-Project2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afcca399059ae367"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "production-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275165642836:subnet/subnet-0ce7f75be852fb190",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ce7f75be852fb190",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "275165642836",
            "tags": {
              "Name": "Hangout-Project2"
            },
            "tags_all": {
              "Name": "Hangout-Project2"
            },
            "vpc_id": "vpc-0afcca399059ae367"
          },
          "dependencies": [
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "production",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275165642836:vpc/vpc-0afcca399059ae367",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bd67ddfad92d1e92",
            "default_route_table_id": "rtb-0408dc191c6ea4d3b",
            "default_security_group_id": "sg-0f78850fe10a973c8",
            "dhcp_options_id": "dopt-4a811b30",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0afcca399059ae367",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0408dc191c6ea4d3b",
            "owner_id": "275165642836",
            "tags": {
              "Name": "Hangout-Project2"
            },
            "tags_all": {
              "Name": "Hangout-Project2"
            }
          }
        }
      ]
    }
  ]
}